2003-10-21  lav

	* user.cc: (UserLineEnd) position on previous line indent if in text
	  mode and the line is empty; (UserCommentLine) add default case,
	  uncomment // in c files.
	* loadsave.cc: (GetDevSize) use BLKGETSIZE if available; fix
	  comparisions, so that looping is not possible.

2002-10-03  lav

	* options.cc: save hl_option in le.ini.

2002-10-25  lav

	* keymap.cc: (GetActionCodeText) fix char<0 handling.

2002-02-04  LaMont Jones <lamont@smallone.fc.hp.com>

	* highli.cc: use CLOCKS_PER_SEC instead of CLK_TCK.

2001-10-03  lav

	* help.cc: fix for 8-bit characters.
	* options.cc: fix for old curses without mouse support.

2001-07-02  lav

	* options.cc: save UseMouse in le.ini.

2001-06-08  lav

	* edit.cc: don't call ChooseFile for file from command line.

2001-05-22  lav

	* user.cc: disable IndentPrefix in r/o mode.

2001-05-16  lav

	* bm.cc, user.cc: remember/restore also screen top and shift; set
	  stdcol.

2001-05-14  lav

	* bm.cc, bm.h: new files.
	* keymap.cc, keymap.h, keymapfn.cc, keymapdf.cc, loadsave.cc, user.cc,
	  user.h: bookmark support.

2001-04-28  lav

	* keymap.cc: (ActionCodePrettyPrint) print 8-bit chars and ^@ correctly.
	* history.cc: check device number too.

2001-04-13  lav

	* highli.cc: stop highlighting when it takes too long.
	* edit.h, kern.cc: (ReplaceTextFromFile, ScanForCharForward) new functions.
	* keymap.cc, keymap.h, keymapfn.cc: support for loading/saving keymaps.
	* loadsave.cc: use fchmod/ftruncate; speed up file loading.
	* textpoin.cc: don't set flags for zero TextPoint.

2001-04-11  lav

	* user.cc: stop drag mark on block operations.

2001-04-09  lav

	* keymap.cc: fix several sign-expansion bugs.
	* block.cc: stop drag mark on block operations.

2001-03-20  lav

	* user.cc: (UserLineDown) don't insert many \n in text mode; don't
	  mark text modified if last eol is added.

2001-03-16  lav

	* getch.cc: (linux_process_key) new function.
	* keymap.cc, keymap.h, keymapfn.cc, keymapdf.cc: new action